<resources>
    <string name="app_name">商户收益</string>
    <string name="input_phone_no">请输入手机号</string>
    <string name="input_area">请选择所在地区</string>
    <string name="input_adress">请输入详细地址</string>
    <string name="input_invitation_phone">请输入邀请人手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="sure_input_pwd">请确认密码</string>
    <string name="input_msg_code">请输入短信验证码</string>
    <string name="apply_acount">账号注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="complete">完成</string>
    <string name="edit_pwd">修改密码</string>
    <string name="pwd">密码</string>
    <string name="sure">确定</string>
    <string name="shopper_info">商户资料</string>
    <string name="withdrawals_record">提现记录</string>
    <string name="shoper_name">商户姓名</string>
    <string name="score">积分</string>
    <string name="shoper_phone">商户手机</string>
    <string name="dispatch_profit">批发收益</string>
    <string name="retail_profit">零售收益</string>
    <string name="cash_withdrawal_amount">提现金额</string>
    <string name="tips">温馨提示</string>
    <string name="input_dispatch_cash">请输入批发提现金额</string>
    <string name="input_retail_cash">请输入零售提现金额</string>
    <string name="pending_orders">待处理订单</string>
    <string name="sure_cash">确定提现</string>
    <string name="receiving_adress">收货地址</string>
    <string name="input_receiving_adress">请输入收货地址</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="phone_num">手机号</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="opening_bank">开户行</string>
    <string name="input_opening_bank">请输入开户行</string>
    <string name="bank_number">银行卡号</string>
    <string name="input_bank_number">请输入银行卡号</string>
    <string name="weixin_number">微信账号</string>
    <string name="input_weixin_number">请输入微信账号</string>
    <string name="zfb_number">支付宝账号</string>
    <string name="input_zfb_number">请输入支付宝账号</string>
    <string name="recommender_phone">推荐人手机</string>
    <string name="input_recommender_phone">请输入推荐人手机</string>
    <string name="my_order">我的订单</string>
    <string name="order_num">订单编号</string>
    <string name="order_time">下单时间</string>
    <string name="order_price">订单金额</string>
    <string name="get">获取</string>
    <string name="sure_send">确定发货</string>
    <string name="select_province">选择省份</string>
    <string name="select_city">选择市</string>
    <string name="select_county">选择县(区)</string>
    <string name="select_town">选择镇(街道)</string>
    <string name="empty_name">姓名为空</string>
    <string name="empty_phone">手机号为空</string>
    <string name="empty_area">所在地区为空</string>
    <string name="empty_detail_adress">详细地址为空</string>
    <string name="empty_account">开户行信息，微信账号，支付宝账号至少有一个不为空</string>
    <string name="one_account">开户行信息，微信账号，支付宝账号,填写一个即可</string>
    <string name="empty_pwd">密码为空</string>
    <string name="empty_sure_pwd">确认密码为空</string>
    <string name="no_equals_pwd">密码和确认密码不同</string>
    <string name="error_pwd">密码错误</string>
    <string name="empty_invitation_phone">邀请人手机为空</string>
    <string name="empty_sms">短信验证码为空</string>
    <string name="empty_image_code">图片验证码为空</string>
    <string name="imput_image_code">输入上述图片验证码</string>
    <string name="cancel">取消</string>
    <string name="error_phone">手机号码不正确</string>
    <string name="error_recommender_phone">邀请人手机号码不正确</string>
    <string name="phone_explain">手机应用说明</string>
    <string name="outLogin">退出登录</string>
    <string name="service">服务中心</string>
    <string name="leav_msg">留言咨询</string>
    <string name="income_rule">收益规则</string>
    <string name="my_income">我的收益</string>
    <string name="input_cash_num">请输入提现金额</string>
    <string name="error_cash_num">提现金额大于收益金额，请重新输入</string>
    <string name="cash_result">提现结果</string>
    <string name="examine_ing">审核中</string>
    <string name="cash_sucess">提现成功</string>
    <string name="not_pass">未通过</string>
    <string name="cash">提现</string>
    <string name="type">类型</string>
    <string name="edit_sucess">修改成功</string>
    <string name="want_to_leave_a_message">我要留言咨询</string>
    <string name="register_success">注册成功</string>
    <string name="select_adress">选择地址</string>
    <string name="add">添加</string>
    <string name="add_adress">添加地址</string>
    <string name="edit_adress">编辑地址</string>
    <string name="delete_adress">删除地址</string>
    <string name="save">保存</string>
    <string name="handler_success">操作成功</string>
    <string name="introducer">介绍人</string>
    <string name="recommender">邀请人</string>
    <string name="no_order_data">暂无订单数据</string>
    <string name="app_notes">应用说明</string>

</resources>
