<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/btn_registe"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/icon_name"
                android:hint="@string/input_name" />

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <EditText
                android:id="@+id/login_phone"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/log_phone_login"
                android:hint="@string/input_phone_no"
                android:inputType="number" />

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <TextView
                android:id="@+id/tv_area"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/icon_area"
                android:drawableRight="@mipmap/icon_next_gray"
                android:gravity="center_vertical"
                android:hint="@string/input_area"
                android:inputType="number" />

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <EditText
                android:id="@+id/et_adress"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/icon_area"
                android:hint="@string/input_adress" />

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <!--<EditText-->
                <!--android:id="@+id/et_open_bank"-->
                <!--style="@style/inputStyle02"-->
                <!--android:drawableLeft="@mipmap/icon_blank_num"-->
                <!--android:hint="@string/input_opening_bank" />-->

            <!--<include-->
                <!--style="@style/lineStyle01"-->
                <!--layout="@layout/layout_line"></include>-->

            <!--<EditText-->
                <!--android:id="@+id/et_account"-->
                <!--style="@style/inputStyle02"-->
                <!--android:drawableLeft="@mipmap/icon_blank"-->
                <!--android:hint="@string/input_bank_number" />-->

            <!--<include-->
                <!--style="@style/lineStyle01"-->
                <!--layout="@layout/layout_line"></include>-->

            <!--<EditText-->
                <!--android:id="@+id/et_wx_number"-->
                <!--style="@style/inputStyle02"-->
                <!--android:drawableLeft="@mipmap/icon_weixin_gray"-->
                <!--android:hint="@string/input_weixin_number" />-->

            <!--<include-->
                <!--style="@style/lineStyle01"-->
                <!--layout="@layout/layout_line"></include>-->

            <!--<EditText-->
                <!--android:id="@+id/et_zfb_number"-->
                <!--style="@style/inputStyle02"-->
                <!--android:drawableLeft="@mipmap/icon_zfb_gray"-->
                <!--android:hint="@string/input_zfb_number" />-->

            <!--<include-->
                <!--style="@style/lineStyle01"-->
                <!--layout="@layout/layout_line"></include>-->

            <EditText
                android:id="@+id/login_pwd"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/log_code_login"
                android:hint="@string/input_pwd" />

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <EditText
                android:id="@+id/sure_login_pwd"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/log_code_login"
                android:hint="@string/sure_input_pwd" />

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <EditText
                android:id="@+id/invitation_phone"
                style="@style/inputStyle02"
                android:drawableLeft="@mipmap/log_phone_login"
                android:hint="@string/input_invitation_phone"
                android:inputType="number" />

            <include
                android:id="@+id/line4"
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>

            <RelativeLayout
                style="@style/inputLayout"
                android:layout_marginLeft="0dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/msg_code"
                    style="@style/inputStyle02"
                    android:layout_toLeftOf="@+id/tv_get_code"
                    android:drawableLeft="@mipmap/log_code_login"
                    android:hint="@string/input_msg_code"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/tv_get_code"
                    style="@style/btnStyle01"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/get" />
            </RelativeLayout>

            <include
                style="@style/lineStyle01"
                layout="@layout/layout_line"></include>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_registe"
        style="@style/btnStyle01"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/regist" />
</RelativeLayout>