<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/et_code"
            style="@style/inputStyle02"
            android:layout_height="48dp"
            android:paddingLeft="15dp"
            android:inputType="number"
            android:layout_below="@+id/iv_code"
            android:hint="@string/imput_image_code" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/btnStyle01"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_868686"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_sure"
            style="@style/btnStyle01"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/sure" />
    </RelativeLayout>
</RelativeLayout>